--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Esha Gunvant Bhagat</title>
+    <link rel="stylesheet" href="style.css"
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
@@ -89,8 +90,29 @@
 <body>
 
 <header>
-    <h1>Esha Gunvant Bhagat</h1>
-    <p>Software Engineering Aspirant | Python & Data Enthusiast</p>
+    <section class="hero">
+
+  <div class="hero-text">
+
+    <h1>Hi, I'm Esha Bhagat</h1>
+
+    <h3>Frontend Developer | Software Engineer Aspirant</h3>
+
+    <p>I build modern and responsive websites.</p>
+
+    <a href="#projects" class="btn">View Projects</a>
+
+    <a href="resume.pdf" class="btn">Download Resume</a>
+
+  </div>
+
+  <div class="hero-img">
+  <img src="esha.jpg" alt="Esha">
+</div>
+
+
+
+</section>
 </header>
 
 <nav>
@@ -106,7 +128,7 @@
     <h2>About Me</h2>
     <p> <section class="about">
 
-<h2>About Me</h2>
+
 
 <p>
 I am Esha Gunavant Bhagat, a Computer Science Engineering student and aspiring Software Engineer. 
