--- a/index.html
+++ b/index.html
@@ -1,94 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Esha Bhagat | Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Esha Bhagat | Portfolio</title>
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
-  <!-- NAVBAR -->
-  <nav>
-    <h2>Esha Bhagat</h2>
-    <ul>
-      <li><a href="#hero">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+<!-- HEADER -->
+<header>
+    <nav>
+        <h2 class="logo">Esha Bhagat</h2>
 
-  <!-- HERO SECTION -->
-  <section class="hero" id="hero">
-    <div class="hero-card">
-      <img src="esha.jpg" alt="Esha Bhagat">
-      <h1>Hello, I'm <span class="name-highlight">Esha Bhagat</span></h1>
-      <p><span id="typed"></span></p>
-      <div class="hero-buttons">
-        <a href="#projects" class="btn">View Project</a>
-        <a href="resume.pdf" class="btn btn-outline">Download Resume</a>
-      </div>
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+
+        <button id="toggle">🌙</button>
+    </nav>
+</header>
+
+
+<!-- HERO SECTION -->
+<section id="home" class="hero">
+
+    <div class="hero-left">
+        <img src="esha.jpg" alt="Esha Photo">
     </div>
-  </section>
 
-  <!-- ABOUT ME -->
-  <section id="about">
-    <div class="section-card">
-      <h2>About Me</h2>
-      <p>I am a frontend developer skilled in HTML, CSS, JavaScript. I build modern, responsive, and professional websites with smooth animations and dark theme.</p>
+    <div class="hero-right">
+        <h1>Hello, I'm Esha Bhagat</h1>
+        <h3>Frontend Developer | CSE Student</h3>
+        <p>I build professional and modern websites.</p>
+
+        <button onclick="scrollToProjects()">View Projects</button>
     </div>
-  </section>
 
-  <!-- SKILLS -->
-  <section id="skills">
-    <div class="section-card">
-      <h2>Skills</h2>
-      <div class="skills-badges">
-        <span>HTML</span>
-        <span>CSS</span>
-        <span>JavaScript</span>
-        <span>C</span>
-        <span>C++</span>
-      </div>
+</section>
+
+
+<!-- ABOUT -->
+<section id="about" class="section">
+    <h2>About Me</h2>
+
+    <p>
+        I am a Computer Science Engineering student passionate about
+        web development. I create modern, responsive, and professional websites.
+    </p>
+</section>
+
+
+<!-- SKILLS -->
+<section id="skills" class="section">
+
+    <h2>Skills</h2>
+
+    <div class="skills-container">
+
+        <div class="skill">HTML</div>
+        <div class="skill">CSS</div>
+        <div class="skill">JavaScript</div>
+        <div class="skill">C++</div>
+        <div class="skill">GitHub</div>
+
     </div>
-  </section>
 
-  <!-- PROJECTS -->
-  <section id="projects">
-    <div class="section-card">
-      <h2>Projects</h2>
-      <div class="project-card">
-        <h3>Advanced Todo App</h3>
-        <p>A modern task management app using HTML, CSS, JS with add, delete, complete features. Fully responsive with dark theme.</p>
-        <a href="todo-app.png" class="btn">View Project</a>
-      </div>
+</section>
+
+
+<!-- PROJECTS -->
+<section id="projects" class="section">
+
+    <h2>Projects</h2>
+
+    <div class="project-container">
+
+        <div class="project-card">
+            <h3>Portfolio Website</h3>
+            <p>Professional personal portfolio website</p>
+            <button>View</button>
+        </div>
+
+        <div class="project-card">
+            <h3>Event Management System</h3>
+            <p>College event management website</p>
+            <button>View</button>
+        </div>
+
+        <div class="project-card">
+            <h3>Landing Page</h3>
+            <p>Responsive modern landing page</p>
+            <button>View</button>
+        </div>
+
     </div>
-  </section>
 
-  <!-- CONTACT -->
-  <section id="contact">
-    <div class="section-card">
-      <h2>Contact Me</h2>
-      <form>
+</section>
+
+
+<!-- CONTACT -->
+<section id="contact" class="section">
+
+    <h2>Contact Me</h2>
+
+    <form>
+
         <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea placeholder="Your Message" required></textarea>
-        <button type="submit" class="btn">Send Message</button>
-      </form>
-    </div>
-  </section>
 
-  <script>
-    var typed = new Typed('#typed', {
-      strings: ['Frontend Developer', 'CSE Student', 'Web Enthusiast'],
-      typeSpeed: 60,
-      backSpeed: 40,
-      loop: true
-    });
-  </script>
+        <input type="email" placeholder="Your Email" required>
+
+        <textarea placeholder="Your Message"></textarea>
+
+        <button type="submit">Send</button>
+
+    </form>
+
+</section>
+
+
+<!-- FOOTER -->
+<footer>
+
+    <p>© 2026 Esha Bhagat | All Rights Reserved</p>
+
+</footer>
+
+
+<script src="script.js"></script>
 
 </body>
 </html>
